#2 aggiornati path API presence
